--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,9 @@ spring.jpa.generate-ddl=true
 spring.jpa.properties.hibernate.hb2dll.auto = update
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+#upload-file
+spring.servlet.multipart.max-file-size=50MB
+spring.servlet.multipart.max-request-size=50MB
+upload.path=D:\\UploadFile\\
+display.path=/src/main/resources/static/img/
+spring.web.resources.static-locations=file:${upload.path}
