--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,6 +15,6 @@ logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 #upload-file
 spring.servlet.multipart.max-file-size=50MB
 spring.servlet.multipart.max-request-size=50MB
-upload.path=D:\\UploadFile\\
+upload.path=D:\\Practice\\spring boot\\src\\main\\resources\\static\\img\\
 display.path=/src/main/resources/static/img/
 spring.web.resources.static-locations=file:${upload.path}
