--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,4 +17,6 @@ spring.servlet.multipart.max-file-size=50MB
 spring.servlet.multipart.max-request-size=50MB
 upload.path=D:\\Practice\\spring boot\\src\\main\\resources\\static\\img\\
 display.path=/src/main/resources/static/img/
+
 spring.web.resources.static-locations=file:${upload.path}
+spring.mvc.static-path-pattern=/content/**
