--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,4 @@ spring.servlet.multipart.max-request-size=50MB
 upload.path=D:\\upload-file
 display.path=/src/main/resources/static/img/
 spring.web.resources.static-locations=file:${upload.path}
+spring.mvc.static-path-pattern=/files/**
