--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,9 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok'
     providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    //>>Web Socket
+    implementation 'org.springframework.boot:spring-boot-starter-websocket'
+    // Web Socket<<
 }
 
 tasks.named('test') {
